# ChangeLog for www-plugins/kpartsplugin
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-plugins/kpartsplugin/ChangeLog,v 1.11 2012/08/02 20:54:14 dilfridge Exp $

*kpartsplugin-20120723 (02 Aug 2012)

  02 Aug 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  -kpartsplugin-20120529.ebuild, +kpartsplugin-20120723.ebuild:
  Version bump; remove old

*kpartsplugin-20120605 (22 Jul 2012)

  22 Jul 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  -kpartsplugin-20110823-r1.ebuild, +kpartsplugin-20120605.ebuild:
  Version bump; remove old

*kpartsplugin-20120529 (01 Jun 2012)

  01 Jun 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  +kpartsplugin-20120529.ebuild:
  Version bump

*kpartsplugin-20110823-r1 (03 Apr 2012)

  03 Apr 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  +kpartsplugin-20110823-r1.ebuild, +files/kpartsplugin-20110823-xpi.patch:
  Blacklist xpi files, bug 408695

  24 Feb 2012; Johannes Huber <johu@gentoo.org> -kpartsplugin-20101216.ebuild:
  Remove old.

  24 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  kpartsplugin-20110823.ebuild:
  x86 stable wrt bug #404873

  21 Feb 2012; Agostino Sarubbo <ago@gentoo.org> kpartsplugin-20110823.ebuild:
  Stable for amd64, wrt bug #404873

*kpartsplugin-20110823 (18 Dec 2011)

  18 Dec 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  +kpartsplugin-20110823.ebuild:
  Version bump

  13 Feb 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  -kpartsplugin-20100723.ebuild, kpartsplugin-20101216.ebuild:
  Remove older. Stabilise latest on amd64 and x86.

*kpartsplugin-20101216 (09 Jan 2011)

  09 Jan 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  +kpartsplugin-20101216.ebuild:
  Version bump

*kpartsplugin-20100723 (04 Nov 2010)

  04 Nov 2010; Andreas K. Huettel <dilfridge@gentoo.org>
  +kpartsplugin-20100723.ebuild, +metadata.xml:
  New application, fixes bug 323565; thanks to Francesco Riosa for the
  original ebuild
