@@ -1,8 +1,8 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-plugins/kpartsplugin/kpartsplugin-20110823.ebuild,v 1.3 2012/02/24 15:05:49 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-plugins/kpartsplugin/kpartsplugin-20110823.ebuild,v 1.4 2012/08/25 19:54:58 dilfridge Exp $
 
-EAPI=3
+EAPI=4
 inherit kde4-base nsplugins
 
 DESCRIPTION="Plugin using KDE's KParts technology to embed file viewers into non-KDE browsers"
