@@ -1,6 +1,11 @@
 # ChangeLog for www-plugins/kpartsplugin
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-plugins/kpartsplugin/ChangeLog,v 1.11 2012/08/02 20:54:14 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-plugins/kpartsplugin/ChangeLog,v 1.12 2012/08/25 19:54:58 dilfridge Exp $
+
+  25 Aug 2012; Andreas K. Huettel <dilfridge@gentoo.org>
+  kpartsplugin-20110823.ebuild, -kpartsplugin-20120605.ebuild,
+  kpartsplugin-20120723.ebuild:
+  Remove old; bump EAPI to 4
 
 *kpartsplugin-20120723 (02 Aug 2012)
 
